--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,11 +18,38 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:text="@string/hbd_text"
         android:textColor="@color/merah"
         android:textSize="@dimen/text_25"
-        android:textStyle="bold"
-        android:layout_marginTop="@dimen/activity_horizontal_margin"/>
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/btnClick"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="200dp"
+            android:layout_marginLeft="@dimen/activity_horizontal"
+            android:layout_marginRight="@dimen/activity_horizontal"
+            android:onClick="openCard"
+            android:text="@string/resto" />
+
+        <Button
+            android:id="@+id/btnEducation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/activity_horizontal"
+            android:layout_marginRight="@dimen/activity_horizontal"
+            android:onClick="openEducation"
+            android:text="@string/education" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/txvFrom"
@@ -30,18 +57,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:text="@string/from"
         android:textColor="@color/kuning"
-        android:textSize="25dp"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
-
-    <Button
-        android:id="@+id/btnClick"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:onClick="openCard"
-        android:text="@string/open"/>
+        android:textSize="25dp" />
 </RelativeLayout>
